--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
   <!-- Icon -->
-    <link rel="icon" href="Images/Gabriel.ico">
+    <link rel="icon" href="images/Gabriel.ico">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" id="page-top">
