--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img class="profile-picture" src="images\Arpad G Bondor.jpg" alt="Arpad Gabor Bondor profile picture">
 
                 <h1 class="">Árpád Gábor Bondor [Gabriel]</h1>
-                <p class="h3"><strong>Software Developer</strong> · <span class="text-muted">Pitlochry, Scotland<span></p>
+                <p class="h3"><strong><mark>Software Developer</mark></strong> · <span class="text-muted">Pitlochry, Scotland<span></p>
                 <p>
                   <a href="https://www.linkedin.com/in/arpad-gabor-bondor/"><span class="fab fa-linkedin contact-icon"></span></a>
                   <a href="https://github.com/ArpadGBondor"><span class="fab fa-github contact-icon"></span></a>
