--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <p class="h3"><mark>August 2020</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Coronavirus - Looking After Your Customer</p>
+              <p class="h3">Coronavirus - Looking After Your Customer</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -333,7 +333,7 @@
               <p class="h3"><mark>August 2020</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Coronavirus - Service After Lockdown</p>
+              <p class="h3">Coronavirus - Service After Lockdown</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -341,7 +341,7 @@
               <p class="h3"><mark>August 2020</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Coronavirus - Cleaning and Hygiene</p>
+              <p class="h3">Coronavirus - Cleaning and Hygiene</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -349,7 +349,7 @@
               <p class="h3"><mark>August 2020</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Coronavirus - Preparing to Reopen</p>
+              <p class="h3">Coronavirus - Preparing to Reopen</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -357,7 +357,7 @@
               <p class="h3"><mark>August 2020</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Health and Safety Level 2</p>
+              <p class="h3">Health and Safety Level 2</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -365,7 +365,7 @@
               <p class="h3"><mark>August 2020</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Food Allergens</p>
+              <p class="h3">Food Allergens</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -373,7 +373,7 @@
               <p class="h3"><mark>July 2020</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Food Safety Level 2</p>
+              <p class="h3">Food Safety Level 2</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -381,7 +381,7 @@
               <p class="h3"><mark>July 2020</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Licensing and Social Responsibility</p>
+              <p class="h3">Licensing and Social Responsibility</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -389,7 +389,7 @@
               <p class="h3"><mark>October 2019</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">SALPS (Scottish Award for Licensed Premises Staff)</p>
+              <p class="h3">SALPS (Scottish Award for Licensed Premises Staff)</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -397,7 +397,7 @@
               <p class="h3"><mark>August 2019</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Emergency first aid at work (Red Cross - one day course)</p>
+              <p class="h3">Emergency first aid at work (Red Cross - one day course)</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -405,7 +405,7 @@
               <p class="h3"><mark>June 2019</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Driving Pass Plus</p>
+              <p class="h3">Driving Pass Plus</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -413,7 +413,7 @@
               <p class="h3"><mark>April 2019</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Food safety & hygiene level 2</p>
+              <p class="h3">Food safety & hygiene level 2</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -421,7 +421,7 @@
               <p class="h3"><mark>September 2018</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">Full UK Driving licence</p>
+              <p class="h3">Full UK Driving licence</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -429,7 +429,7 @@
               <p class="h3"><mark>November 2012</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">English intermediate complex language exam</p>
+              <p class="h3">English intermediate complex language exam</p>
             </div>
           </div>
           <div class="row qualifications-row">
@@ -437,7 +437,7 @@
               <p class="h3"><mark>February 2006</mark></p>
             </div>
             <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-              <p class="">ECDL (European Computer Driving License)</p>
+              <p class="h3">ECDL (European Computer Driving License)</p>
             </div>
           </div>
         </div>
@@ -454,7 +454,7 @@
             <div class="col">
               <div class="row">
                 <div class="col-lg-4">
-                  <p class="highlight title">2020 - 2020</p>
+                  <p class="h3 mark">2020 - 2020</p>
                 </div>
                 <div class="col-lg-4 ml-3 m-lg-0">
                   <p>Web Application Development - </p>
@@ -481,7 +481,7 @@
             <div class="col">
               <div class="row">
                 <div class="col-lg-4">
-                  <p class="highlight title">2016 - 2017</p>
+                  <p class="h3 mark">2016 - 2017</p>
                 </div>
                 <div class="col-lg-4 ml-3 m-lg-0">
                   <p>GitHub Projects</p>
@@ -509,7 +509,7 @@
             <div class="col">
               <div class="row">
                 <div class="col-lg-4">
-                  <p class="highlight title">2013 - 2016</p>
+                  <p class="h3 mark">2013 - 2016</p>
                 </div>
                 <div class="col-lg-4 ml-3 m-lg-0">
                   <p>Development of an integrated accounting, payroll, billing and inventory management system.</p>
@@ -533,7 +533,7 @@
             <div class="col">
               <div class="row">
                 <div class="col-lg-4">
-                  <p class="highlight title">2006 - 2012</p>
+                  <p class="h3 mark">2006 - 2012</p>
                 </div>
                 <div class="col-lg-4 ml-3 m-lg-0">
                   <p>Software Information Technologist (BSc)</p>
@@ -570,7 +570,7 @@
             <div class="col">
               <div class="row">
                 <div class="col-lg-4">
-                  <p class="highlight title">2001 - 2006</p>
+                  <p class="h3 mark">2001 - 2006</p>
                 </div>
                 <div class="col-lg-4 ml-3 m-lg-0">
                   <p>Secondary School</p>
@@ -599,7 +599,7 @@
             <div class="col">
               <div class="row">
                 <div class="col-lg-4">
-                  <p class="highlight title">1992 - 2001</p>
+                  <p class="h3 mark">1992 - 2001</p>
                 </div>
                 <div class="col-lg-4 ml-3 m-lg-0">
                   <p>Primary School</p>
