--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
   <!-- Font Awsome Icons -->
-  <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
+  <script src="https://kit.fontawesome.com/796fdfa0dc.js" crossorigin="anonymous"></script>
   <!-- Icon -->
     <link rel="icon" href="images/Gabriel.ico">
 </head>
