--- a/index.html
+++ b/index.html
@@ -778,19 +778,27 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6 col-lg-3">
-              <span class="fas fa-film interests-icon icon-3rem"></span>
+              <p class="interests-icon">
+                <span class="fas fa-film icon-3rem"></span>
+              </p>
               <p class="interests-p">In my free time, I like to watch Fantasy, Sci-fi & Super Hero TV shows and movies. I enjoy discovering large fantasy universes throughout multiple movies, like the Star Wars Universe, the Marvel Cinematic Universe, or the Arrowverse.</p>
             </div>
             <div class="col-md-6 col-lg-3">
-              <span class="fas fa-book interests-icon icon-3rem"></span>
+              <p class="interests-icon">
+                <span class="fas fa-book icon-3rem"></span>
+              </p>
               <p class="interests-p">I'm not much of a reader, but thanks to Audible I'm 13 books deep in a Dungeons & Dragons book series called The Legends of Drizzt. I like Terry Pratchett's Discworld books, and Harry Potter books as well, but I haven't read them in English yet.</p>
             </div>
             <div class="col-md-6 col-lg-3">
-              <span class="fas fa-laptop interests-icon icon-3rem"></span>
+              <p class="interests-icon">
+                <span class="fas fa-laptop icon-3rem"></span>
+              </p>
               <p class="interests-p">If I need a little distraction, I like to play sandbox computer games. Building something, and solving logical problems, are great stress relief for me. Check out <a href="https://youtu.be/zP9g2HQHueY">here</a> my favourite electronic project that I built last year in Rust.</p>
             </div>
             <div class="col-md-6 col-lg-3">
-              <span class="fas fa-dice interests-icon icon-3rem"></span>
+              <p class="interests-icon">
+                <span class="fas fa-dice icon-3rem"></span>
+              </p>
               <p class="interests-p">I also like to play board games with my friends whenever our conflicting schedule allows it. Right now, we are in the middle of a Star Wars - Imperial Assault campaign, that keeps getting delayed due to the ongoing pandemic.</p>
             </div>
           </div>
