--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="col-lg-6">
             <div class="header-info">
               <div class="container-fluid">
-                <img class="profile-picture" src="images/Arpad G Bondor.jpg" alt="Arpad Gabor Bondor profile picture">
+                <img class="profile-picture" src="images/Arpad-G-Bondor.jpg" alt="Arpad Gabor Bondor profile picture">
 
                 <h1 class="">Árpád Gábor Bondor [Gabriel]</h1>
                 <p class="h3"><strong><mark>Software Developer</mark></strong> · <span class="text-muted">Pitlochry, Scotland</span></p>
