--- a/index.html
+++ b/index.html
@@ -474,6 +474,12 @@
                 <li>JavaScript</li>
                 <li>jQuery</li>
                 <li>Node JS</li>
+                <li>Express</li>
+                <li>EJS</li>
+                <li>SQL</li>
+                <li>MongoDB</li>
+                <li>Mongoose</li>
+                <li>Authentication: Passport</li>
               </ul>
             </div>
           </div>
