--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <h1 class="">Árpád Gábor Bondor [Gabriel]</h1>
                 <p class="h3"><strong><mark>Software Developer</mark></strong> · <span class="text-muted">Pitlochry, Scotland</span></p>
                 <p>
-                  <a href="https://www.linkedin.com/in/arpad-gabor-bondor/"><span class="fab fa-linkedin contact-icon icon-2-5rem"></span></a>
-                  <a href="https://github.com/ArpadGBondor"><span class="fab fa-github contact-icon icon-2-5rem"></span></a>
-                  <a href="https://www.facebook.com/arpad.g.bondor/"><span class="fab fa-facebook contact-icon icon-2-5rem"></span></a>
+                  <a href="https://www.linkedin.com/in/arpad-gabor-bondor/" target="_blank"><span class="fab fa-linkedin contact-icon icon-2-5rem"></span></a>
+                  <a href="https://github.com/ArpadGBondor" target="_blank"><span class="fab fa-github contact-icon icon-2-5rem"></span></a>
+                  <a href="https://www.facebook.com/arpad.g.bondor/" target="_blank"><span class="fab fa-facebook contact-icon icon-2-5rem"></span></a>
                   <a href="mailto:arpad.g.bondor@gmail.com"><span class="fas fa-envelope contact-icon icon-2-5rem"></span></a>
                 </p>
               </div>
@@ -815,9 +815,9 @@
 
     <!-- Footer -->
     <footer class="footer section-color-light" id="footer">
-      <a href="https://www.linkedin.com/in/arpad-gabor-bondor/"><span class="fab fa-linkedin contact-icon icon-2-5rem"></span></a>
-      <a href="https://github.com/ArpadGBondor"><span class="fab fa-github contact-icon icon-2-5rem"></span></a>
-      <a href="https://www.facebook.com/arpad.g.bondor/"><span class="fab fa-facebook contact-icon icon-2-5rem"></span></a>
+      <a href="https://www.linkedin.com/in/arpad-gabor-bondor/" target="_blank"><span class="fab fa-linkedin contact-icon icon-2-5rem"></span></a>
+      <a href="https://github.com/ArpadGBondor" target="_blank"><span class="fab fa-github contact-icon icon-2-5rem"></span></a>
+      <a href="https://www.facebook.com/arpad.g.bondor/" target="_blank"><span class="fab fa-facebook contact-icon icon-2-5rem"></span></a>
       <a href="mailto:arpad.g.bondor@gmail.com"><span class="fas fa-envelope contact-icon icon-2-5rem"></span></a>
       <p>Copyright © 2020 Árpád Gábor Bondor</p>
     </footer>
