--- a/index.html
+++ b/index.html
@@ -142,13 +142,10 @@
                     <p class="h5 mark">2020 - 2021</p>
                   </div>
                   <div class="col-xl-5 ml-3 m-xl-0">
-                    <p>Web Application Development<br />Online Courses</p>
+                    <p>Web Application Development Online Courses</p>
                   </div>
-                  <div class="col-xl-4 ml-3 m-xl-0">
-                    <p>Udemy.com</p>
-                    <p>+</p>
-                    <p>IT Professional Training LTD</p>
-                    <p>(Glasgow, Scotland)</p>
+                  <div class="col-xl-4 ml-3 mt-2 m-xl-0">
+                    <p>Udemy.com, and IT Professional Training LTD (Glasgow, Scotland)</p>
                   </div>
                 </div>
               </div>
@@ -186,7 +183,7 @@
                   <div class="col-xl-5 ml-3 m-xl-0">
                     <p>GitHub Projects</p>
                   </div>
-                  <div class="col-xl-4 ml-3 m-xl-0">
+                  <div class="col-xl-4 ml-3 mt-2 m-xl-0">
                     <p>(Self Study)</p>
                   </div>
                 </div>
@@ -214,7 +211,7 @@
                   <div class="col-xl-5 ml-3 m-xl-0">
                     <p>Development of an integrated accounting, payroll, billing and inventory management system.</p>
                   </div>
-                  <div class="col-xl-4 ml-3 m-xl-0">
+                  <div class="col-xl-4 ml-3 mt-2 m-xl-0">
                     <p>Számviteli Rendszer Kft. – QualitySoft</p>
                     <p>(Székesfehérvár, Hungary)</p>
                   </div>
@@ -239,7 +236,7 @@
                     <p>Software Information Technologist (BSc)</p>
                     <p>(Computer Science SQCF Level 10)</p>
                   </div>
-                  <div class="col-xl-4 ml-3 m-xl-0">
+                  <div class="col-xl-4 ml-3 mt-2 m-xl-0">
                     <p>Eötvös Loránd University</p>
                     <p>(Budapest, Hungary)</p>
                   </div>
@@ -276,7 +273,7 @@
                     <p>Secondary School</p>
                     <p>Informatics & English specialisation</p>
                   </div>
-                  <div class="col-xl-4 ml-3 m-xl-0">
+                  <div class="col-xl-4 ml-3 mt-2 m-xl-0">
                     <p>Gróf Széchenyi István Secondary Technical School</p>
                     <p>(Székesfehérvár, Hungary)</p>
                   </div>
@@ -304,7 +301,7 @@
                   <div class="col-xl-5 ml-3 m-xl-0">
                     <p>Primary School</p>
                   </div>
-                  <div class="col-xl-4 ml-3 m-xl-0">
+                  <div class="col-xl-4 ml-3 mt-2 m-xl-0">
                     <p>Mészöly Géza Primary School</p>
                     <p>(Sárbogárd, Hungary)</p>
                   </div>
@@ -377,7 +374,7 @@
                 <p class="h5 mark">May 2021</p>
               </div>
               <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-                <p class="h4">Serverless Functions with Netlify</p>
+                <p class="h4">Udemy: Serverless Functions with Netlify</p>
               </div>
             </div>
 
@@ -386,7 +383,7 @@
                 <p class="h5 mark">April 2021</p>
               </div>
               <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-                <p class="h4">The Comlete 2021 Web Development Bootcamp</p>
+                <p class="h4">Udemy: The Comlete 2021 Web Development Bootcamp</p>
               </div>
             </div>
 
@@ -395,7 +392,7 @@
                 <p class="h5 mark">Feb 2021</p>
               </div>
               <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
-                <p class="h4">50 Projects In 50 Days - HTML, CSS & JavaScript</p>
+                <p class="h4">Udemy: 50 Projects In 50 Days - HTML, CSS & JavaScript</p>
               </div>
             </div>
 
