print color fix

--- a/index.html
+++ b/index.html
@@ -85,21 +85,38 @@
                     <span class="text-muted">Pitlochry, Scotland</span>
                   </p>
                   <p>
-                    <a href="https://www.linkedin.com/in/arpad-gabor-bondor/" target="_blank" rel="nofollow"
+                    <a
+                      class="print-block"
+                      href="https://www.linkedin.com/in/arpad-gabor-bondor/"
+                      target="_blank"
+                      rel="nofollow"
                       ><span class="fab fa-linkedin contact-icon icon-2-5rem"></span
-                    ></a>
-                    <a href="https://github.com/ArpadGBondor" target="_blank" rel="nofollow"
+                      ><span class="print-only print-inline">https://www.linkedin.com/in/arpad-gabor-bondor/</span></a
+                    >
+                    <a class="print-block" href="https://github.com/ArpadGBondor" target="_blank" rel="nofollow"
                       ><span class="fab fa-github contact-icon icon-2-5rem"></span
-                    ></a>
-                    <a href="https://www.facebook.com/arpad.g.bondor/" target="_blank" rel="nofollow"
+                      ><span class="print-only print-inline">https://github.com/ArpadGBondor</span></a
+                    >
+                    <a
+                      class="print-block"
+                      href="https://www.facebook.com/arpad.g.bondor/"
+                      target="_blank"
+                      rel="nofollow"
                       ><span class="fab fa-facebook contact-icon icon-2-5rem"></span
-                    ></a>
-                    <a href="mailto:arpad.g.bondor@gmail.com"
+                      ><span class="print-only print-inline">https://www.facebook.com/arpad.g.bondor/</span></a
+                    >
+                    <a class="print-block" href="mailto:arpad.g.bondor@gmail.com"
                       ><span class="fas fa-envelope contact-icon icon-2-5rem"></span
-                    ></a>
-                    <a href="https://api.whatsapp.com/send?phone=447749123734" target="_blank" rel="nofollow"
+                      ><span class="print-only print-inline">arpad.g.bondor@gmail.com</span></a
+                    >
+                    <a
+                      class="print-block"
+                      href="https://api.whatsapp.com/send?phone=447749123734"
+                      target="_blank"
+                      rel="nofollow"
                       ><span class="fab fa-whatsapp contact-icon icon-2-5rem"></span
-                    ></a>
+                      ><span class="print-only print-inline">+447749123734</span></a
+                    >
                   </p>
                 </div>
               </div>
@@ -116,12 +133,12 @@
                 <p class="text-center">
                   <a class="btn btn-lg" href="https://gabriel-bondor.herokuapp.com/" target="_blank" rel="nofollow"
                     >Check my portfolio</a
-                  >
+                  ><span class="print-only print-inline"> (https://gabriel-bondor.herokuapp.com/)</span>
                 </p>
                 <p class="text-center">
                   <a class="btn btn-lg" href="https://github.com/ArpadGBondor" target="_blank" rel="nofollow"
                     >Check my recent projects on GitHub</a
-                  >
+                  ><span class="print-only print-inline"> (https://github.com/ArpadGBondor)</span>
                 </p>
               </div>
             </div>
@@ -911,19 +928,27 @@
 
       <!-- Footer -->
       <footer class="footer section-color-light" id="footer">
-        <a href="https://www.linkedin.com/in/arpad-gabor-bondor/" target="_blank" rel="nofollow"
+        <a class="print-block" href="https://www.linkedin.com/in/arpad-gabor-bondor/" target="_blank" rel="nofollow"
           ><span class="fab fa-linkedin contact-icon icon-2-5rem"></span
-        ></a>
-        <a href="https://github.com/ArpadGBondor" target="_blank" rel="nofollow"
+          ><span class="print-only print-inline">https://www.linkedin.com/in/arpad-gabor-bondor/</span></a
+        >
+        <a class="print-block" href="https://github.com/ArpadGBondor" target="_blank" rel="nofollow"
           ><span class="fab fa-github contact-icon icon-2-5rem"></span
-        ></a>
-        <a href="https://www.facebook.com/arpad.g.bondor/" target="_blank" rel="nofollow"
+          ><span class="print-only print-inline">https://github.com/ArpadGBondor</span></a
+        >
+        <a class="print-block" href="https://www.facebook.com/arpad.g.bondor/" target="_blank" rel="nofollow"
           ><span class="fab fa-facebook contact-icon icon-2-5rem"></span
-        ></a>
-        <a href="mailto:arpad.g.bondor@gmail.com"><span class="fas fa-envelope contact-icon icon-2-5rem"></span></a>
-        <a href="https://api.whatsapp.com/send?phone=447749123734" target="_blank" rel="nofollow"
+          ><span class="print-only print-inline">https://www.facebook.com/arpad.g.bondor/</span></a
+        >
+        <a class="print-block" href="mailto:arpad.g.bondor@gmail.com"
+          ><span class="fas fa-envelope contact-icon icon-2-5rem"></span
+          ><span class="print-only print-inline">arpad.g.bondor@gmail.com</span></a
+        >
+        <a class="print-block" href="https://api.whatsapp.com/send?phone=447749123734" target="_blank" rel="nofollow"
           ><span class="fab fa-whatsapp contact-icon icon-2-5rem"></span
-        ></a>
+          ><span class="print-only print-inline">+447749123734</span></a
+        >
+
         <p>Copyright © 2020-2021 Árpád Gábor Bondor</p>
       </footer>
     </div>
