--- a/index.html
+++ b/index.html
@@ -711,6 +711,8 @@
                     Maintaining the source code of a 25 years old integrated accounting, payroll, billing, and inventory
                     management system
                   </li>
+                  <li>Software development in Alaska Xbase++</li>
+                  <li>Database management in dBase and SQL</li>
                   <li>Agile development</li>
                   <li>Developing new features</li>
                   <li>Refactoring legacy codes</li>
