finished ITPT course

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <div class="container-fluid">
             <div class="row education-row">
               <div class="col-xl-3">
-                <p class="h5 mark">May 2020 - Present</p>
+                <p class="h5 mark">May 2020 - June 2021</p>
               </div>
               <div class="col-md-6 col-xl-5 ml-3 ml-xl-0">
                 <p class="h4">Full Stack Developer PDA<br />(SQCF Level 7)</p>
