--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
               <div class="col">
                 <div class="row">
                   <div class="col-xl-6">
-                    <p class="h5 mark">September 2020 - May 2020</p>
+                    <p class="h5 mark">September 2020 - Present</p>
                   </div>
                   <div class="col-xl-6 ml-3 ml-xl-0">
                     <p class="h4">Night Porter</p>
