--- a/index.html
+++ b/index.html
@@ -388,6 +388,24 @@
           <div class="container-fluid">
             <div class="row qualifications-row">
               <div class="col-sm-4 col-md-3">
+                <p class="h5 mark">Dec 2021</p>
+              </div>
+              <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
+                <p class="h4">Udemy: React Front To Back</p>
+              </div>
+            </div>
+
+            <div class="row qualifications-row">
+              <div class="col-sm-4 col-md-3">
+                <p class="h5 mark">Dec 2021</p>
+              </div>
+              <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
+                <p class="h4">Food Allergy and Intolerance Online Training</p>
+              </div>
+            </div>
+
+            <div class="row qualifications-row">
+              <div class="col-sm-4 col-md-3">
                 <p class="h5 mark">May 2021</p>
               </div>
               <div class="col-sm-8 col-md-9 ml-3 ml-sm-0">
