--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
                                 <p class="text-center">
                                     <a
                                         class="btn btn-lg"
-                                        href="https://gabriel-bondor.herokuapp.com/"
+                                        href="https://gabriel-bondor.netlify.app/"
                                         target="_blank"
                                         rel="nofollow"
                                         >Check my portfolio</a
                                     ><span class="print-only print-inline">
-                                        (https://gabriel-bondor.herokuapp.com/)</span
+                                        (https://gabriel-bondor.netlify.app/)</span
                                     >
                                 </p>
                                 <p class="text-center">
