--- a/index.html
+++ b/index.html
@@ -613,7 +613,28 @@
                             <div class="col">
                                 <div class="row">
                                     <div class="col-xl-6">
-                                        <p class="h5 mark">September 2020 - Present</p>
+                                        <p class="h5 mark">October 2022 - Present</p>
+                                    </div>
+                                    <div class="col-xl-6 ml-3 ml-xl-0">
+                                        <p class="h4">Software Engineer</p>
+                                        <p>Nuom</p>
+                                        <p>(Nottingham, England)</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-lg-4 mt-2 ml-3 m-sm-0">
+                                <p class="h6 mark">Duties:</p>
+                                <ul>
+                                    <li>Development and maintenance of multiple JavaScript based web-projects</li>
+                                    <li>Using a wide range of JavaScript frameworks, libraries and technologies</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row experience-row">
+                            <div class="col">
+                                <div class="row">
+                                    <div class="col-xl-6">
+                                        <p class="h5 mark">September 2020 - September 2022</p>
                                     </div>
                                     <div class="col-xl-6 ml-3 ml-xl-0">
                                         <p class="h4">Night Porter</p>
