--- a/index.html
+++ b/index.html
@@ -176,7 +176,43 @@
                             <div class="col">
                                 <div class="row">
                                     <div class="col-xl-3">
-                                        <p class="h5 mark">2020 - 2021</p>
+                                        <p class="h5 mark">2022 - Present</p>
+                                    </div>
+                                    <div class="col-xl-5 ml-3 m-xl-0">
+                                        <p>Development and maintenance of multiple JavaScript based web-projects</p>
+                                    </div>
+                                    <div class="col-xl-4 ml-3 mt-2 m-xl-0">
+                                        <p>Nuom (Nottingham, England)</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-xl-4 mt-2 ml-3 m-sm-0">
+                                <p>Front-end:</p>
+                                <ul>
+                                    <li>Kendo UI</li>
+                                    <li>Vue.js</li>
+                                </ul>
+                                <p>Back-end:</p>
+                                <ul>
+                                    <li>Express.js</li>
+                                    <li>Nuxt.js</li>
+                                    <li>Nest.js - Microservices</li>
+                                    <li>Google Cloud Hosting</li>
+                                </ul>
+                                <p>Other technologies:</p>
+                                <ul>
+                                    <li>Airbrake - Frontend Monitoring</li>
+                                    <li>Cypress - End-to-end testing</li>
+                                    <li>Docker</li>
+                                    <li>CI/CD - Bitbucket Pipelines</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row skills-row">
+                            <div class="col">
+                                <div class="row">
+                                    <div class="col-xl-3">
+                                        <p class="h5 mark">2020 - 2022</p>
                                     </div>
                                     <div class="col-xl-5 ml-3 m-xl-0">
                                         <p>Web Application Development Online Courses</p>
