--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     <h1 class="">Árpád Gábor Bondor [Gabriel]</h1>
                                     <p class="h3">
                                         <strong><mark>Software Developer</mark></strong> ·
-                                        <span class="text-muted">Pitlochry, Scotland</span>
+                                        <span class="text-muted">East Kilbride, Scotland</span>
                                     </p>
                                     <p>
                                         <a
