--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                 <ul>
                   <li>Kendo UI</li>
                   <li>Vue.js</li>
+                  <li>Tailwind</li>
                 </ul>
                 <p>Back-end:</p>
                 <ul>
