fix: update tech-stack

--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@
                 </ul>
                 <p>Google Cloud</p>
                 <ul>
-                  <li>GC: Compute Engine - VM hosting</li>
-                  <li>GC: App Engine - Front-end hosting</li>
-                  <li>GC: Functions - Serverless functions</li>
-                  <li>GC: Firebase</li>
-                  <li>GC: Firestore</li>
+                  <li>Compute Engine - VM hosting</li>
+                  <li>App Engine - Front-end hosting</li>
+                  <li>Functions - Serverless functions</li>
+                  <li>Firebase</li>
+                  <li>Firestore</li>
                 </ul>
                 <p>Other technologies:</p>
                 <ul>
