--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                   <li>HTML + CSS</li>
                   <li>JavaScript</li>
                   <li>TypeScript</li>
+                  <li>Node.js</li>
                   <li>Express.js</li>
                   <li>Nuxt.js</li>
                   <li>Vue.js</li>
