fix: update current duties

--- a/index.html
+++ b/index.html
@@ -720,12 +720,21 @@
                 <p class="h6 mark">Duties:</p>
                 <ul>
                   <li>
-                    Development and maintenance of multiple JavaScript based
-                    web-projects
+                    Development and maintenance of multiple JavaScript-based
+                    front-end and backend projects
                   </li>
                   <li>
-                    Using a wide range of JavaScript frameworks, libraries and
-                    technologies
+                    Using a wide range of JavaScript frameworks, libraries, and
+                    tools
+                  </li>
+                  <li>Creating and maintaining CI/CD pipelines in Bitbucket</li>
+                  <li>
+                    Managing and deploying projects within Google Cloud
+                    infrastructure
+                  </li>
+                  <li>
+                    Building internal tools to streamline error investigation
+                    and QA processes
                   </li>
                 </ul>
               </div>
